--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="container">
         <h1>Coming Soon!</h1>
         <p>We're working hard to bring you an amazing experience. Stay tuned!</p>
-        <a href="#" class="subscribe">Subscribe for Updates</a>
+        <form action="https://your-mailchimp-url.com" method="POST" target="_blank">
+            <input type="email" name="EMAIL" placeholder="Enter your email" required>
+            <button type="submit" class="subscribe">Subscribe for Updates</button>
+        </form>
     </div>
 
 </body>
