--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Coming Soon!</h1>
         <p>We're working hard to bring you an amazing experience. Stay tuned!</p>
-        <form action="https://your-mailchimp-url.com" method="POST" target="_blank">
+        <form action="https://github.us22.list-manage.com/subscribe/post?u=91a457d2b55dc4a4a98577766&amp;id=2fe9058583&amp;f_id=005dd7e1f0" method="POST" target="_blank">
             <input type="email" name="EMAIL" placeholder="Enter your email" required>
             <button type="submit" class="subscribe">Subscribe for Updates</button>
         </form>
